package src.domain.entities;
import java.util.UUID;
public interface ILikeable {
    String getType();
    UUID getId();
}
